// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generated-env-tests (SHORT) env default override 1`] = `
"#!/bin/sh
JAVA_HOME=/test/java/home
NODE_HOME=/test/node/home
ZOSMF_APPLID=IZUDFLT
ZOSMF_HOST=some.test.hostname
ZOSMF_PORT=12321
ZWE_DISCOVERY_SERVICES_LIST=https://example.com:7553/eureka/
ZWE_components_api_catalog_debug=false
ZWE_components_api_catalog_enabled=true
ZWE_components_api_catalog_port=7552
ZWE_components_apiml_enabled=true
ZWE_components_app_server_debug=false
ZWE_components_app_server_enabled=true
ZWE_components_app_server_port=7556
ZWE_components_caching_service_debug=false
ZWE_components_caching_service_enabled=true
ZWE_components_caching_service_port=7555
ZWE_components_caching_service_storage_evictionStrategy=reject
ZWE_components_caching_service_storage_infinispan_jgroups_keyExchange_port=7601
ZWE_components_caching_service_storage_infinispan_jgroups_port=7600
ZWE_components_caching_service_storage_mode=infinispan
ZWE_components_discovery_debug=false
ZWE_components_discovery_enabled=true
ZWE_components_discovery_port=7553
ZWE_components_explorer_jes_enabled=true
ZWE_components_explorer_mvs_enabled=true
ZWE_components_explorer_uss_enabled=true
ZWE_components_gateway_apiml_security_auth_provider=saf
ZWE_components_gateway_apiml_security_auth_zosmf_jwtAutoconfiguration=jwt
ZWE_components_gateway_apiml_security_auth_zosmf_serviceId=ibmzosmf
ZWE_components_gateway_apiml_security_authorization_endpoint_enabled=false
ZWE_components_gateway_apiml_security_authorization_provider=native
ZWE_components_gateway_apiml_security_x509_enabled=false
ZWE_components_gateway_debug=false
ZWE_components_gateway_enabled=true
ZWE_components_gateway_port=7554
ZWE_components_zaas_debug=false
ZWE_components_zaas_enabled=true
ZWE_components_zaas_port=7558
ZWE_components_zss_agent_64bit=true
ZWE_components_zss_agent_jwt_fallback=true
ZWE_components_zss_crossMemoryServerName=ZWESIS_STD
ZWE_components_zss_enabled=true
ZWE_components_zss_port=7557
ZWE_haInstance_hostname=example.com
ZWE_haInstance_id=SYS0
ZWE_java_home=/test/java/home
ZWE_node_home=/test/node/home
ZWE_zOSMF_applId=IZUDFLT
ZWE_zOSMF_host=some.test.hostname
ZWE_zOSMF_port=12321
ZWE_zowe_certificate_keystore_alias=localhost
ZWE_zowe_certificate_keystore_file=/global/zowe/keystore/localhost/localhost.keystore.p12
ZWE_zowe_certificate_keystore_password=password
ZWE_zowe_certificate_keystore_type=PKCS12
ZWE_zowe_certificate_pem_certificate=/global/zowe/keystore/localhost/localhost.cer
ZWE_zowe_certificate_pem_certificateAuthorities=/global/zowe/keystore/local_ca/local_ca.cer
ZWE_zowe_certificate_pem_key=/global/zowe/keystore/localhost/localhost.key
ZWE_zowe_certificate_truststore_file=/global/zowe/keystore/localhost/localhost.truststore.p12
ZWE_zowe_certificate_truststore_password=password
ZWE_zowe_certificate_truststore_type=PKCS12
ZWE_zowe_configmgr_validation=STRICT
ZWE_zowe_cookieIdentifier=1
ZWE_zowe_extensionDirectory=/global/zowe/extensions
ZWE_zowe_externalDomains=example.com
ZWE_zowe_externalDomains_0=example.com
ZWE_zowe_externalPort=7554
ZWE_zowe_job_name=ZWE1SV
ZWE_zowe_job_prefix=ZWE1
ZWE_zowe_launchScript_logLevel=info
ZWE_zowe_launchScript_onComponentConfigureFail=warn
ZWE_zowe_launchScript_startupChecks_default=exit
ZWE_zowe_launchScript_startupChecks_ports=disabled
ZWE_zowe_logDirectory=/test/dir/logs
ZWE_zowe_network_client_tls_attls=false
ZWE_zowe_network_proxyType=https
ZWE_zowe_network_server_tls_attls=false
ZWE_zowe_network_server_tls_maxTls=TLSv1.3
ZWE_zowe_network_server_tls_minTls=TLSv1.2
ZWE_zowe_rbacProfileIdentifier=1
ZWE_zowe_runtimeDirectory=/test/dir
ZWE_zowe_setup_certificate_dname_caCommonName="Zowe Development Instances CA"
ZWE_zowe_setup_certificate_dname_commonName="Zowe Development Instances Certificate"
ZWE_zowe_setup_certificate_dname_country=CZ
ZWE_zowe_setup_certificate_dname_locality=Prague
ZWE_zowe_setup_certificate_dname_org="Zowe Sample"
ZWE_zowe_setup_certificate_dname_orgUnit="API Mediation Layer"
ZWE_zowe_setup_certificate_dname_state=Prague
ZWE_zowe_setup_certificate_pkcs12_caAlias=local_ca
ZWE_zowe_setup_certificate_pkcs12_caPassword=local_ca_password
ZWE_zowe_setup_certificate_pkcs12_directory=/test/dir/pkcs12
ZWE_zowe_setup_certificate_pkcs12_lock=true
ZWE_zowe_setup_certificate_pkcs12_name=localhost
ZWE_zowe_setup_certificate_pkcs12_password=password
ZWE_zowe_setup_certificate_type=PKCS12
ZWE_zowe_setup_certificate_validity=3650
ZWE_zowe_setup_dataset_authLoadlib=TEST.DATASET.PFX.SZWEAUTH
ZWE_zowe_setup_dataset_authPluginLib=DFLT.OVERRIDE.DOES.NOT.EXIST
ZWE_zowe_setup_dataset_jcllib=TEST.DATASET.PFX.JCLLIB
ZWE_zowe_setup_dataset_loadlib=TEST.DATASET.PFX.SZWEEXEC
ZWE_zowe_setup_dataset_parmlib=TEST.DATASET.PFX.PARMLIB
ZWE_zowe_setup_dataset_parmlibMembers_zis=ZWESIP00
ZWE_zowe_setup_dataset_prefix=TEST.DATASET.PFX
ZWE_zowe_setup_dataset_proclib=TEST.DATASET.PFX.TEST.PROCLIB
ZWE_zowe_setup_jcl_enable=true
ZWE_zowe_setup_jcl_header=
ZWE_zowe_setup_security_groups_admin=ZWEADMIN
ZWE_zowe_setup_security_groups_stc=ZWEADMIN
ZWE_zowe_setup_security_groups_sysProg=ZWEADMIN
ZWE_zowe_setup_security_product=ESMT
ZWE_zowe_setup_security_stcs_aux=ZWESASTC
ZWE_zowe_setup_security_stcs_zis=ZWESISTC
ZWE_zowe_setup_security_stcs_zowe=ZWESLSTC
ZWE_zowe_setup_security_users_zis=ZWESIUSR
ZWE_zowe_setup_security_users_zowe=ZWESVUSR
ZWE_zowe_setup_vsam_mode=NONRLS
ZWE_zowe_setup_vsam_name=TEST.DATASET.PFX.VSAM
ZWE_zowe_setup_vsam_storageClass=
ZWE_zowe_setup_vsam_volume=TSTVOL
ZWE_zowe_sysMessageTrim=false
ZWE_zowe_sysMessages=ZWEL0021I,ZWEL0018I,ZWEL0006I,ZWES1601I,ZWEL0008I,ZWEL0022I,ZWEL0001I,ZWEL0002I,ZWEAM000I,ZWED0031I,ZWES1013I
ZWE_zowe_sysMessages_0=ZWEL0021I
ZWE_zowe_sysMessages_10=ZWES1013I
ZWE_zowe_sysMessages_1=ZWEL0018I
ZWE_zowe_sysMessages_2=ZWEL0006I
ZWE_zowe_sysMessages_3=ZWES1601I
ZWE_zowe_sysMessages_4=ZWEL0008I
ZWE_zowe_sysMessages_5=ZWEL0022I
ZWE_zowe_sysMessages_6=ZWEL0001I
ZWE_zowe_sysMessages_7=ZWEL0002I
ZWE_zowe_sysMessages_8=ZWEAM000I
ZWE_zowe_sysMessages_9=ZWED0031I
ZWE_zowe_verifyCertificates=STRICT
ZWE_zowe_workspaceDirectory=/test/dir/workspace"
`;

exports[`generated-env-tests (SHORT) env defaults 1`] = `
"#!/bin/sh
JAVA_HOME=/test/java/home
NODE_HOME=/test/node/home
ZOSMF_APPLID=IZUDFLT
ZOSMF_HOST=some.test.hostname
ZOSMF_PORT=12321
ZWE_DISCOVERY_SERVICES_LIST=https://example.com:7553/eureka/
ZWE_components_api_catalog_debug=false
ZWE_components_api_catalog_enabled=true
ZWE_components_api_catalog_port=7552
ZWE_components_apiml_enabled=true
ZWE_components_app_server_debug=false
ZWE_components_app_server_enabled=true
ZWE_components_app_server_port=7556
ZWE_components_caching_service_debug=false
ZWE_components_caching_service_enabled=true
ZWE_components_caching_service_port=7555
ZWE_components_caching_service_storage_evictionStrategy=reject
ZWE_components_caching_service_storage_infinispan_jgroups_keyExchange_port=7601
ZWE_components_caching_service_storage_infinispan_jgroups_port=7600
ZWE_components_caching_service_storage_mode=infinispan
ZWE_components_discovery_debug=false
ZWE_components_discovery_enabled=true
ZWE_components_discovery_port=7553
ZWE_components_explorer_jes_enabled=true
ZWE_components_explorer_mvs_enabled=true
ZWE_components_explorer_uss_enabled=true
ZWE_components_gateway_apiml_security_auth_provider=saf
ZWE_components_gateway_apiml_security_auth_zosmf_jwtAutoconfiguration=jwt
ZWE_components_gateway_apiml_security_auth_zosmf_serviceId=ibmzosmf
ZWE_components_gateway_apiml_security_authorization_endpoint_enabled=false
ZWE_components_gateway_apiml_security_authorization_provider=native
ZWE_components_gateway_apiml_security_x509_enabled=false
ZWE_components_gateway_debug=false
ZWE_components_gateway_enabled=true
ZWE_components_gateway_port=7554
ZWE_components_zaas_debug=false
ZWE_components_zaas_enabled=true
ZWE_components_zaas_port=7558
ZWE_components_zss_agent_64bit=true
ZWE_components_zss_agent_jwt_fallback=true
ZWE_components_zss_crossMemoryServerName=ZWESIS_STD
ZWE_components_zss_enabled=true
ZWE_components_zss_port=7557
ZWE_haInstance_hostname=example.com
ZWE_haInstance_id=SYS0
ZWE_java_home=/test/java/home
ZWE_node_home=/test/node/home
ZWE_zOSMF_applId=IZUDFLT
ZWE_zOSMF_host=some.test.hostname
ZWE_zOSMF_port=12321
ZWE_zowe_certificate_keystore_alias=localhost
ZWE_zowe_certificate_keystore_file=/global/zowe/keystore/localhost/localhost.keystore.p12
ZWE_zowe_certificate_keystore_password=password
ZWE_zowe_certificate_keystore_type=PKCS12
ZWE_zowe_certificate_pem_certificate=/global/zowe/keystore/localhost/localhost.cer
ZWE_zowe_certificate_pem_certificateAuthorities=/global/zowe/keystore/local_ca/local_ca.cer
ZWE_zowe_certificate_pem_key=/global/zowe/keystore/localhost/localhost.key
ZWE_zowe_certificate_truststore_file=/global/zowe/keystore/localhost/localhost.truststore.p12
ZWE_zowe_certificate_truststore_password=password
ZWE_zowe_certificate_truststore_type=PKCS12
ZWE_zowe_configmgr_validation=STRICT
ZWE_zowe_cookieIdentifier=1
ZWE_zowe_extensionDirectory=/global/zowe/extensions
ZWE_zowe_externalDomains=example.com
ZWE_zowe_externalDomains_0=example.com
ZWE_zowe_externalPort=7554
ZWE_zowe_job_name=ZWE1SV
ZWE_zowe_job_prefix=ZWE1
ZWE_zowe_launchScript_logLevel=info
ZWE_zowe_launchScript_onComponentConfigureFail=warn
ZWE_zowe_launchScript_startupChecks_default=exit
ZWE_zowe_launchScript_startupChecks_ports=disabled
ZWE_zowe_logDirectory=/test/dir/logs
ZWE_zowe_network_client_tls_attls=false
ZWE_zowe_network_proxyType=https
ZWE_zowe_network_server_tls_attls=false
ZWE_zowe_network_server_tls_maxTls=TLSv1.3
ZWE_zowe_network_server_tls_minTls=TLSv1.2
ZWE_zowe_rbacProfileIdentifier=1
ZWE_zowe_runtimeDirectory=/test/dir
ZWE_zowe_setup_certificate_dname_caCommonName="Zowe Development Instances CA"
ZWE_zowe_setup_certificate_dname_commonName="Zowe Development Instances Certificate"
ZWE_zowe_setup_certificate_dname_country=CZ
ZWE_zowe_setup_certificate_dname_locality=Prague
ZWE_zowe_setup_certificate_dname_org="Zowe Sample"
ZWE_zowe_setup_certificate_dname_orgUnit="API Mediation Layer"
ZWE_zowe_setup_certificate_dname_state=Prague
ZWE_zowe_setup_certificate_pkcs12_caAlias=local_ca
ZWE_zowe_setup_certificate_pkcs12_caPassword=local_ca_password
ZWE_zowe_setup_certificate_pkcs12_directory=/test/dir/pkcs12
ZWE_zowe_setup_certificate_pkcs12_lock=true
ZWE_zowe_setup_certificate_pkcs12_name=localhost
ZWE_zowe_setup_certificate_pkcs12_password=password
ZWE_zowe_setup_certificate_type=PKCS12
ZWE_zowe_setup_certificate_validity=3650
ZWE_zowe_setup_dataset_authLoadlib=TEST.DATASET.PFX.SZWEAUTH
ZWE_zowe_setup_dataset_authPluginLib=TEST.DATASET.PFX.ZWESAPL
ZWE_zowe_setup_dataset_jcllib=TEST.DATASET.PFX.JCLLIB
ZWE_zowe_setup_dataset_loadlib=TEST.DATASET.PFX.SZWEEXEC
ZWE_zowe_setup_dataset_parmlib=TEST.DATASET.PFX.PARMLIB
ZWE_zowe_setup_dataset_parmlibMembers_zis=ZWESIP00
ZWE_zowe_setup_dataset_prefix=TEST.DATASET.PFX
ZWE_zowe_setup_dataset_proclib=TEST.DATASET.PFX.TEST.PROCLIB
ZWE_zowe_setup_jcl_enable=true
ZWE_zowe_setup_jcl_header=
ZWE_zowe_setup_security_groups_admin=ZWEADMIN
ZWE_zowe_setup_security_groups_stc=ZWEADMIN
ZWE_zowe_setup_security_groups_sysProg=ZWEADMIN
ZWE_zowe_setup_security_product=ESMT
ZWE_zowe_setup_security_stcs_aux=ZWESASTC
ZWE_zowe_setup_security_stcs_zis=ZWESISTC
ZWE_zowe_setup_security_stcs_zowe=ZWESLSTC
ZWE_zowe_setup_security_users_zis=ZWESIUSR
ZWE_zowe_setup_security_users_zowe=ZWESVUSR
ZWE_zowe_setup_vsam_mode=NONRLS
ZWE_zowe_setup_vsam_name=TEST.DATASET.PFX.VSAM
ZWE_zowe_setup_vsam_storageClass=
ZWE_zowe_setup_vsam_volume=TSTVOL
ZWE_zowe_sysMessageTrim=false
ZWE_zowe_sysMessages=ZWEL0021I,ZWEL0018I,ZWEL0006I,ZWES1601I,ZWEL0008I,ZWEL0022I,ZWEL0001I,ZWEL0002I,ZWEAM000I,ZWED0031I,ZWES1013I
ZWE_zowe_sysMessages_0=ZWEL0021I
ZWE_zowe_sysMessages_10=ZWES1013I
ZWE_zowe_sysMessages_1=ZWEL0018I
ZWE_zowe_sysMessages_2=ZWEL0006I
ZWE_zowe_sysMessages_3=ZWES1601I
ZWE_zowe_sysMessages_4=ZWEL0008I
ZWE_zowe_sysMessages_5=ZWEL0022I
ZWE_zowe_sysMessages_6=ZWEL0001I
ZWE_zowe_sysMessages_7=ZWEL0002I
ZWE_zowe_sysMessages_8=ZWEAM000I
ZWE_zowe_sysMessages_9=ZWED0031I
ZWE_zowe_verifyCertificates=STRICT
ZWE_zowe_workspaceDirectory=/test/dir/workspace"
`;

exports[`generated-env-tests (SHORT) env no node 1`] = `
"#!/bin/sh
JAVA_HOME=/test/java/home
ZOSMF_APPLID=IZUDFLT
ZOSMF_HOST=some.test.hostname
ZOSMF_PORT=12321
ZWE_DISCOVERY_SERVICES_LIST=https://example.com:7553/eureka/
ZWE_components_api_catalog_debug=false
ZWE_components_api_catalog_enabled=true
ZWE_components_api_catalog_port=7552
ZWE_components_apiml_enabled=true
ZWE_components_app_server_debug=false
ZWE_components_app_server_enabled=false
ZWE_components_app_server_port=7556
ZWE_components_caching_service_debug=false
ZWE_components_caching_service_enabled=true
ZWE_components_caching_service_port=7555
ZWE_components_caching_service_storage_evictionStrategy=reject
ZWE_components_caching_service_storage_infinispan_jgroups_keyExchange_port=7601
ZWE_components_caching_service_storage_infinispan_jgroups_port=7600
ZWE_components_caching_service_storage_mode=infinispan
ZWE_components_discovery_debug=false
ZWE_components_discovery_enabled=true
ZWE_components_discovery_port=7553
ZWE_components_explorer_jes_enabled=true
ZWE_components_explorer_mvs_enabled=true
ZWE_components_explorer_uss_enabled=true
ZWE_components_gateway_apiml_security_auth_provider=saf
ZWE_components_gateway_apiml_security_auth_zosmf_jwtAutoconfiguration=jwt
ZWE_components_gateway_apiml_security_auth_zosmf_serviceId=ibmzosmf
ZWE_components_gateway_apiml_security_authorization_endpoint_enabled=false
ZWE_components_gateway_apiml_security_authorization_provider=native
ZWE_components_gateway_apiml_security_x509_enabled=false
ZWE_components_gateway_debug=false
ZWE_components_gateway_enabled=true
ZWE_components_gateway_port=7554
ZWE_components_zaas_debug=false
ZWE_components_zaas_enabled=true
ZWE_components_zaas_port=7558
ZWE_components_zss_agent_64bit=true
ZWE_components_zss_agent_jwt_fallback=true
ZWE_components_zss_crossMemoryServerName=ZWESIS_STD
ZWE_components_zss_enabled=true
ZWE_components_zss_port=7557
ZWE_haInstance_hostname=example.com
ZWE_haInstance_id=SYS0
ZWE_java_home=/test/java/home
ZWE_zOSMF_applId=IZUDFLT
ZWE_zOSMF_host=some.test.hostname
ZWE_zOSMF_port=12321
ZWE_zowe_certificate_keystore_alias=localhost
ZWE_zowe_certificate_keystore_file=/global/zowe/keystore/localhost/localhost.keystore.p12
ZWE_zowe_certificate_keystore_password=password
ZWE_zowe_certificate_keystore_type=PKCS12
ZWE_zowe_certificate_pem_certificate=/global/zowe/keystore/localhost/localhost.cer
ZWE_zowe_certificate_pem_certificateAuthorities=/global/zowe/keystore/local_ca/local_ca.cer
ZWE_zowe_certificate_pem_key=/global/zowe/keystore/localhost/localhost.key
ZWE_zowe_certificate_truststore_file=/global/zowe/keystore/localhost/localhost.truststore.p12
ZWE_zowe_certificate_truststore_password=password
ZWE_zowe_certificate_truststore_type=PKCS12
ZWE_zowe_configmgr_validation=STRICT
ZWE_zowe_cookieIdentifier=1
ZWE_zowe_extensionDirectory=/global/zowe/extensions
ZWE_zowe_externalDomains=example.com
ZWE_zowe_externalDomains_0=example.com
ZWE_zowe_externalPort=7554
ZWE_zowe_job_name=ZWE1SV
ZWE_zowe_job_prefix=ZWE1
ZWE_zowe_launchScript_logLevel=info
ZWE_zowe_launchScript_onComponentConfigureFail=warn
ZWE_zowe_launchScript_startupChecks_default=exit
ZWE_zowe_launchScript_startupChecks_ports=disabled
ZWE_zowe_logDirectory=/test/dir/logs
ZWE_zowe_network_client_tls_attls=false
ZWE_zowe_network_proxyType=https
ZWE_zowe_network_server_tls_attls=false
ZWE_zowe_network_server_tls_maxTls=TLSv1.3
ZWE_zowe_network_server_tls_minTls=TLSv1.2
ZWE_zowe_rbacProfileIdentifier=1
ZWE_zowe_runtimeDirectory=/test/dir
ZWE_zowe_setup_certificate_dname_caCommonName="Zowe Development Instances CA"
ZWE_zowe_setup_certificate_dname_commonName="Zowe Development Instances Certificate"
ZWE_zowe_setup_certificate_dname_country=CZ
ZWE_zowe_setup_certificate_dname_locality=Prague
ZWE_zowe_setup_certificate_dname_org="Zowe Sample"
ZWE_zowe_setup_certificate_dname_orgUnit="API Mediation Layer"
ZWE_zowe_setup_certificate_dname_state=Prague
ZWE_zowe_setup_certificate_pkcs12_caAlias=local_ca
ZWE_zowe_setup_certificate_pkcs12_caPassword=local_ca_password
ZWE_zowe_setup_certificate_pkcs12_directory=/test/dir/pkcs12
ZWE_zowe_setup_certificate_pkcs12_lock=true
ZWE_zowe_setup_certificate_pkcs12_name=localhost
ZWE_zowe_setup_certificate_pkcs12_password=password
ZWE_zowe_setup_certificate_type=PKCS12
ZWE_zowe_setup_certificate_validity=3650
ZWE_zowe_setup_dataset_authLoadlib=TEST.DATASET.PFX.SZWEAUTH
ZWE_zowe_setup_dataset_authPluginLib=TEST.DATASET.PFX.ZWESAPL
ZWE_zowe_setup_dataset_jcllib=TEST.DATASET.PFX.JCLLIB
ZWE_zowe_setup_dataset_loadlib=TEST.DATASET.PFX.SZWEEXEC
ZWE_zowe_setup_dataset_parmlib=TEST.DATASET.PFX.PARMLIB
ZWE_zowe_setup_dataset_parmlibMembers_zis=ZWESIP00
ZWE_zowe_setup_dataset_prefix=TEST.DATASET.PFX
ZWE_zowe_setup_dataset_proclib=TEST.DATASET.PFX.TEST.PROCLIB
ZWE_zowe_setup_jcl_enable=true
ZWE_zowe_setup_jcl_header=
ZWE_zowe_setup_security_groups_admin=ZWEADMIN
ZWE_zowe_setup_security_groups_stc=ZWEADMIN
ZWE_zowe_setup_security_groups_sysProg=ZWEADMIN
ZWE_zowe_setup_security_product=ESMT
ZWE_zowe_setup_security_stcs_aux=ZWESASTC
ZWE_zowe_setup_security_stcs_zis=ZWESISTC
ZWE_zowe_setup_security_stcs_zowe=ZWESLSTC
ZWE_zowe_setup_security_users_zis=ZWESIUSR
ZWE_zowe_setup_security_users_zowe=ZWESVUSR
ZWE_zowe_setup_vsam_mode=NONRLS
ZWE_zowe_setup_vsam_name=TEST.DATASET.PFX.VSAM
ZWE_zowe_setup_vsam_storageClass=
ZWE_zowe_setup_vsam_volume=TSTVOL
ZWE_zowe_sysMessageTrim=false
ZWE_zowe_sysMessages=ZWEL0021I,ZWEL0018I,ZWEL0006I,ZWES1601I,ZWEL0008I,ZWEL0022I,ZWEL0001I,ZWEL0002I,ZWEAM000I,ZWED0031I,ZWES1013I
ZWE_zowe_sysMessages_0=ZWEL0021I
ZWE_zowe_sysMessages_10=ZWES1013I
ZWE_zowe_sysMessages_1=ZWEL0018I
ZWE_zowe_sysMessages_2=ZWEL0006I
ZWE_zowe_sysMessages_3=ZWES1601I
ZWE_zowe_sysMessages_4=ZWEL0008I
ZWE_zowe_sysMessages_5=ZWEL0022I
ZWE_zowe_sysMessages_6=ZWEL0001I
ZWE_zowe_sysMessages_7=ZWEL0002I
ZWE_zowe_sysMessages_8=ZWEAM000I
ZWE_zowe_sysMessages_9=ZWED0031I
ZWE_zowe_verifyCertificates=STRICT
ZWE_zowe_workspaceDirectory=/test/dir/workspace"
`;

exports[`generated-env-tests (SHORT) env with HA instances 1`] = `""ZWE_PRIVATE_HA_LIST":"lpar1,elpardva,LPAR3,LPAR-4,lpar_4,lpar#4""`;

exports[`generated-env-tests (SHORT) env with HA instances 2`] = `""ZWE_PRIVATE_HA_LIST_SANITIZED":"lpar1,elpardva,lpar3,lpar_4,lpar_4,lpar_4""`;

exports[`generated-env-tests (SHORT) env with HA instances 3`] = `
"#!/bin/sh
JAVA_HOME=/test/java/home
NODE_HOME=/test/node/home
ZOSMF_APPLID=IZUDFLT
ZOSMF_HOST=some.test.hostname
ZOSMF_PORT=12321
ZWE_DISCOVERY_SERVICES_LIST=https://lpr1.example.com:7553/eureka/,https://lpr2.example.com:7553/eureka/,https://lpr3.example.com:7553/eureka/,https://lpr4.example.com:7553/eureka/,https://lpr5.example.com:7553/eureka/,https://lpr6.example.com:7553/eureka/
ZWE_components_api_catalog_debug=false
ZWE_components_api_catalog_enabled=true
ZWE_components_api_catalog_port=7552
ZWE_components_apiml_enabled=true
ZWE_components_app_server_debug=false
ZWE_components_app_server_enabled=true
ZWE_components_app_server_port=7556
ZWE_components_caching_service_debug=false
ZWE_components_caching_service_enabled=true
ZWE_components_caching_service_port=7555
ZWE_components_caching_service_storage_evictionStrategy=reject
ZWE_components_caching_service_storage_infinispan_jgroups_keyExchange_port=7601
ZWE_components_caching_service_storage_infinispan_jgroups_port=7600
ZWE_components_caching_service_storage_mode=infinispan
ZWE_components_discovery_debug=false
ZWE_components_discovery_enabled=true
ZWE_components_discovery_port=7553
ZWE_components_explorer_jes_enabled=true
ZWE_components_explorer_mvs_enabled=true
ZWE_components_explorer_uss_enabled=true
ZWE_components_gateway_apiml_security_auth_provider=saf
ZWE_components_gateway_apiml_security_auth_zosmf_jwtAutoconfiguration=jwt
ZWE_components_gateway_apiml_security_auth_zosmf_serviceId=ibmzosmf
ZWE_components_gateway_apiml_security_authorization_endpoint_enabled=false
ZWE_components_gateway_apiml_security_authorization_provider=native
ZWE_components_gateway_apiml_security_x509_enabled=false
ZWE_components_gateway_debug=false
ZWE_components_gateway_enabled=true
ZWE_components_gateway_port=7554
ZWE_components_zaas_debug=false
ZWE_components_zaas_enabled=true
ZWE_components_zaas_port=7558
ZWE_components_zss_agent_64bit=true
ZWE_components_zss_agent_jwt_fallback=true
ZWE_components_zss_crossMemoryServerName=ZWESIS_STD
ZWE_components_zss_enabled=true
ZWE_components_zss_port=7557
ZWE_haInstance_hostname=example.com
ZWE_haInstance_id=SYS0
ZWE_haInstances_LPAR3_hostname=lpr3.example.com
ZWE_haInstances_LPAR3_sysname=lpr3
ZWE_haInstances_LPAR_4_hostname=lpr4.example.com
ZWE_haInstances_LPAR_4_sysname=lpr4
ZWE_haInstances_elpardva_hostname=lpr2.example.com
ZWE_haInstances_elpardva_sysname=lpr2
ZWE_haInstances_lpar1_hostname=lpr1.example.com
ZWE_haInstances_lpar1_sysname=lpr1
ZWE_haInstances_lpar_4_hostname=lpr6.example.com
ZWE_haInstances_lpar_4_sysname=lpr6
ZWE_java_home=/test/java/home
ZWE_node_home=/test/node/home
ZWE_zOSMF_applId=IZUDFLT
ZWE_zOSMF_host=some.test.hostname
ZWE_zOSMF_port=12321
ZWE_zowe_certificate_keystore_alias=localhost
ZWE_zowe_certificate_keystore_file=/global/zowe/keystore/localhost/localhost.keystore.p12
ZWE_zowe_certificate_keystore_password=password
ZWE_zowe_certificate_keystore_type=PKCS12
ZWE_zowe_certificate_pem_certificate=/global/zowe/keystore/localhost/localhost.cer
ZWE_zowe_certificate_pem_certificateAuthorities=/global/zowe/keystore/local_ca/local_ca.cer
ZWE_zowe_certificate_pem_key=/global/zowe/keystore/localhost/localhost.key
ZWE_zowe_certificate_truststore_file=/global/zowe/keystore/localhost/localhost.truststore.p12
ZWE_zowe_certificate_truststore_password=password
ZWE_zowe_certificate_truststore_type=PKCS12
ZWE_zowe_configmgr_validation=STRICT
ZWE_zowe_cookieIdentifier=1
ZWE_zowe_environments_ZWE_PRIVATE_LOG_LEVEL_ZWELS=TRACE
ZWE_zowe_extensionDirectory=/global/zowe/extensions
ZWE_zowe_externalDomains=example.com
ZWE_zowe_externalDomains_0=example.com
ZWE_zowe_externalPort=7554
ZWE_zowe_job_name=ZWE1SV
ZWE_zowe_job_prefix=ZWE1
ZWE_zowe_launchScript_logLevel=info
ZWE_zowe_launchScript_onComponentConfigureFail=warn
ZWE_zowe_launchScript_startupChecks_default=exit
ZWE_zowe_launchScript_startupChecks_ports=disabled
ZWE_zowe_logDirectory=/test/dir/logs
ZWE_zowe_network_client_tls_attls=false
ZWE_zowe_network_proxyType=https
ZWE_zowe_network_server_tls_attls=false
ZWE_zowe_network_server_tls_maxTls=TLSv1.3
ZWE_zowe_network_server_tls_minTls=TLSv1.2
ZWE_zowe_rbacProfileIdentifier=1
ZWE_zowe_runtimeDirectory=/test/dir
ZWE_zowe_setup_certificate_dname_caCommonName="Zowe Development Instances CA"
ZWE_zowe_setup_certificate_dname_commonName="Zowe Development Instances Certificate"
ZWE_zowe_setup_certificate_dname_country=CZ
ZWE_zowe_setup_certificate_dname_locality=Prague
ZWE_zowe_setup_certificate_dname_org="Zowe Sample"
ZWE_zowe_setup_certificate_dname_orgUnit="API Mediation Layer"
ZWE_zowe_setup_certificate_dname_state=Prague
ZWE_zowe_setup_certificate_pkcs12_caAlias=local_ca
ZWE_zowe_setup_certificate_pkcs12_caPassword=local_ca_password
ZWE_zowe_setup_certificate_pkcs12_directory=/test/dir/pkcs12
ZWE_zowe_setup_certificate_pkcs12_lock=true
ZWE_zowe_setup_certificate_pkcs12_name=localhost
ZWE_zowe_setup_certificate_pkcs12_password=password
ZWE_zowe_setup_certificate_type=PKCS12
ZWE_zowe_setup_certificate_validity=3650
ZWE_zowe_setup_dataset_authLoadlib=TEST.DATASET.PFX.SZWEAUTH
ZWE_zowe_setup_dataset_authPluginLib=TEST.DATASET.PFX.ZWESAPL
ZWE_zowe_setup_dataset_jcllib=TEST.DATASET.PFX.JCLLIB
ZWE_zowe_setup_dataset_loadlib=TEST.DATASET.PFX.SZWEEXEC
ZWE_zowe_setup_dataset_parmlib=TEST.DATASET.PFX.PARMLIB
ZWE_zowe_setup_dataset_parmlibMembers_zis=ZWESIP00
ZWE_zowe_setup_dataset_prefix=TEST.DATASET.PFX
ZWE_zowe_setup_dataset_proclib=TEST.DATASET.PFX.TEST.PROCLIB
ZWE_zowe_setup_jcl_enable=true
ZWE_zowe_setup_jcl_header=
ZWE_zowe_setup_security_groups_admin=ZWEADMIN
ZWE_zowe_setup_security_groups_stc=ZWEADMIN
ZWE_zowe_setup_security_groups_sysProg=ZWEADMIN
ZWE_zowe_setup_security_product=ESMT
ZWE_zowe_setup_security_stcs_aux=ZWESASTC
ZWE_zowe_setup_security_stcs_zis=ZWESISTC
ZWE_zowe_setup_security_stcs_zowe=ZWESLSTC
ZWE_zowe_setup_security_users_zis=ZWESIUSR
ZWE_zowe_setup_security_users_zowe=ZWESVUSR
ZWE_zowe_setup_vsam_mode=NONRLS
ZWE_zowe_setup_vsam_name=TEST.DATASET.PFX.VSAM
ZWE_zowe_setup_vsam_storageClass=
ZWE_zowe_setup_vsam_volume=TSTVOL
ZWE_zowe_sysMessageTrim=false
ZWE_zowe_sysMessages=ZWEL0021I,ZWEL0018I,ZWEL0006I,ZWES1601I,ZWEL0008I,ZWEL0022I,ZWEL0001I,ZWEL0002I,ZWEAM000I,ZWED0031I,ZWES1013I
ZWE_zowe_sysMessages_0=ZWEL0021I
ZWE_zowe_sysMessages_10=ZWES1013I
ZWE_zowe_sysMessages_1=ZWEL0018I
ZWE_zowe_sysMessages_2=ZWEL0006I
ZWE_zowe_sysMessages_3=ZWES1601I
ZWE_zowe_sysMessages_4=ZWEL0008I
ZWE_zowe_sysMessages_5=ZWEL0022I
ZWE_zowe_sysMessages_6=ZWEL0001I
ZWE_zowe_sysMessages_7=ZWEL0002I
ZWE_zowe_sysMessages_8=ZWEAM000I
ZWE_zowe_sysMessages_9=ZWED0031I
ZWE_zowe_verifyCertificates=STRICT
ZWE_zowe_workspaceDirectory=/test/dir/workspace"
`;

exports[`generated-env-tests (SHORT) env with null values 1`] = `
"#!/bin/sh
JAVA_HOME=/test/java/home
NODE_HOME=/test/node/home
ZWE_DISCOVERY_SERVICES_LIST=https://some.test.hostname:7553/eureka/
ZWE_components_api_catalog_debug=false
ZWE_components_api_catalog_enabled=true
ZWE_components_api_catalog_port=7552
ZWE_components_apiml_enabled=false
ZWE_components_app_server_debug=false
ZWE_components_app_server_enabled=true
ZWE_components_app_server_port=7556
ZWE_components_caching_service_debug=false
ZWE_components_caching_service_enabled=true
ZWE_components_caching_service_port=7555
ZWE_components_caching_service_storage_evictionStrategy=reject
ZWE_components_caching_service_storage_infinispan_jgroups_keyExchange_port=7601
ZWE_components_caching_service_storage_infinispan_jgroups_port=7600
ZWE_components_caching_service_storage_mode=infinispan
ZWE_components_discovery_debug=false
ZWE_components_discovery_enabled=true
ZWE_components_discovery_port=7553
ZWE_components_explorer_jes_enabled=true
ZWE_components_explorer_mvs_enabled=true
ZWE_components_explorer_uss_enabled=true
ZWE_components_gateway_apiml_security_auth_provider=zosmf
ZWE_components_gateway_apiml_security_auth_zosmf_jwtAutoconfiguration=jwt
ZWE_components_gateway_apiml_security_auth_zosmf_serviceId=ibmzosmf
ZWE_components_gateway_apiml_security_authorization_endpoint_enabled=false
ZWE_components_gateway_apiml_security_authorization_provider=native
ZWE_components_gateway_apiml_security_x509_enabled=false
ZWE_components_gateway_debug=false
ZWE_components_gateway_enabled=true
ZWE_components_gateway_port=7554
ZWE_components_zaas_debug=false
ZWE_components_zaas_enabled=true
ZWE_components_zaas_port=7558
ZWE_components_zss_agent_jwt_fallback=true
ZWE_components_zss_crossMemoryServerName=ZWESIS_STD
ZWE_components_zss_enabled=true
ZWE_components_zss_port=7557
ZWE_haInstance_hostname=some.test.hostname
ZWE_haInstance_id=SYS0
ZWE_java_home=/test/java/home
ZWE_node_home=/test/node/home
ZWE_zowe_configmgr_validation=STRICT
ZWE_zowe_cookieIdentifier=1
ZWE_zowe_externalDomains=some.test.hostname
ZWE_zowe_externalDomains_0=some.test.hostname
ZWE_zowe_externalPort=7554
ZWE_zowe_job_name=ZWE1SV
ZWE_zowe_job_prefix=ZWE1
ZWE_zowe_launchScript_logLevel=info
ZWE_zowe_launchScript_onComponentConfigureFail=warn
ZWE_zowe_launchScript_startupChecks_default=disabled
ZWE_zowe_launchScript_startupChecks_ports=disabled
ZWE_zowe_network_proxyType=https
ZWE_zowe_rbacProfileIdentifier=1
ZWE_zowe_runtimeDirectory=/test/dir
ZWE_zowe_setup_certificate_dname_caCommonName="Zowe Development Instances CA"
ZWE_zowe_setup_certificate_dname_commonName="Zowe Development Instances Certificate"
ZWE_zowe_setup_certificate_dname_country=CZ
ZWE_zowe_setup_certificate_dname_locality=Prague
ZWE_zowe_setup_certificate_dname_org="Zowe Sample"
ZWE_zowe_setup_certificate_dname_orgUnit="API Mediation Layer"
ZWE_zowe_setup_certificate_dname_state=Prague
ZWE_zowe_setup_certificate_keyring_caLabel=localca
ZWE_zowe_setup_certificate_keyring_label=localhost
ZWE_zowe_setup_certificate_keyring_name=ZoweKeyring
ZWE_zowe_setup_certificate_san=some.test.hostname
ZWE_zowe_setup_certificate_san_0=some.test.hostname
ZWE_zowe_setup_certificate_type=JCEESMTKS
ZWE_zowe_setup_certificate_validity=3650
ZWE_zowe_setup_dataset_authPluginLib=DFLT.OVERRIDE.DOES.NOT.EXIST
ZWE_zowe_setup_dataset_parmlibMembers_zis=ZWESIP00
ZWE_zowe_setup_dataset_prefix=ZOWE.PR#4444
ZWE_zowe_setup_jcl_enable=true
ZWE_zowe_setup_jcl_header=12345
ZWE_zowe_setup_security_groups_admin=ZWEADMIN
ZWE_zowe_setup_security_groups_stc=ZWEADMIN
ZWE_zowe_setup_security_groups_sysProg=ZWEADMIN
ZWE_zowe_setup_security_product=ESMT
ZWE_zowe_setup_security_stcs_aux=ZWESASTC
ZWE_zowe_setup_security_stcs_zis=ZWESISTC
ZWE_zowe_setup_security_stcs_zowe=ZWESLSTC
ZWE_zowe_setup_security_users_zis=ZWESIUSR
ZWE_zowe_setup_security_users_zowe=ZWESVUSR
ZWE_zowe_setup_vsam_name=
ZWE_zowe_sysMessageTrim=false
ZWE_zowe_verifyCertificates=STRICT
ZWE_zowe_workspaceDirectory=/test/dir/workspace"
`;

exports[`generated-env-tests (SHORT) env zowe yaml override default 1`] = `
"#!/bin/sh
JAVA_HOME=/test/java/home
NODE_HOME=/test/node/home
ZOSMF_APPLID=IZUDFLT
ZOSMF_HOST=some.test.hostname
ZOSMF_PORT=12321
ZWE_DISCOVERY_SERVICES_LIST=https://example.com:7553/eureka/
ZWE_components_api_catalog_debug=false
ZWE_components_api_catalog_enabled=true
ZWE_components_api_catalog_port=7552
ZWE_components_apiml_enabled=true
ZWE_components_app_server_debug=false
ZWE_components_app_server_enabled=true
ZWE_components_app_server_port=7556
ZWE_components_caching_service_debug=false
ZWE_components_caching_service_enabled=true
ZWE_components_caching_service_port=7555
ZWE_components_caching_service_storage_evictionStrategy=reject
ZWE_components_caching_service_storage_infinispan_jgroups_keyExchange_port=7601
ZWE_components_caching_service_storage_infinispan_jgroups_port=7600
ZWE_components_caching_service_storage_mode=infinispan
ZWE_components_discovery_debug=false
ZWE_components_discovery_enabled=true
ZWE_components_discovery_port=7553
ZWE_components_explorer_jes_enabled=true
ZWE_components_explorer_mvs_enabled=true
ZWE_components_explorer_uss_enabled=true
ZWE_components_gateway_apiml_security_auth_provider=saf
ZWE_components_gateway_apiml_security_auth_zosmf_jwtAutoconfiguration=jwt
ZWE_components_gateway_apiml_security_auth_zosmf_serviceId=ibmzosmf
ZWE_components_gateway_apiml_security_authorization_endpoint_enabled=false
ZWE_components_gateway_apiml_security_authorization_provider=native
ZWE_components_gateway_apiml_security_x509_enabled=false
ZWE_components_gateway_debug=false
ZWE_components_gateway_enabled=true
ZWE_components_gateway_port=7554
ZWE_components_zaas_debug=false
ZWE_components_zaas_enabled=true
ZWE_components_zaas_port=7558
ZWE_components_zss_agent_64bit=true
ZWE_components_zss_agent_jwt_fallback=true
ZWE_components_zss_crossMemoryServerName=ZWESIS_STD
ZWE_components_zss_enabled=true
ZWE_components_zss_port=7557
ZWE_haInstance_hostname=example.com
ZWE_haInstance_id=SYS0
ZWE_java_home=/test/java/home
ZWE_node_home=/test/node/home
ZWE_zOSMF_applId=IZUDFLT
ZWE_zOSMF_host=some.test.hostname
ZWE_zOSMF_port=12321
ZWE_zowe_certificate_keystore_alias=localhost
ZWE_zowe_certificate_keystore_file=/global/zowe/keystore/localhost/localhost.keystore.p12
ZWE_zowe_certificate_keystore_password=password
ZWE_zowe_certificate_keystore_type=PKCS12
ZWE_zowe_certificate_pem_certificate=/global/zowe/keystore/localhost/localhost.cer
ZWE_zowe_certificate_pem_certificateAuthorities=/global/zowe/keystore/local_ca/local_ca.cer
ZWE_zowe_certificate_pem_key=/global/zowe/keystore/localhost/localhost.key
ZWE_zowe_certificate_truststore_file=/global/zowe/keystore/localhost/localhost.truststore.p12
ZWE_zowe_certificate_truststore_password=password
ZWE_zowe_certificate_truststore_type=PKCS12
ZWE_zowe_configmgr_validation=STRICT
ZWE_zowe_cookieIdentifier=1
ZWE_zowe_extensionDirectory=/global/zowe/extensions
ZWE_zowe_externalDomains=example.com
ZWE_zowe_externalDomains_0=example.com
ZWE_zowe_externalPort=7554
ZWE_zowe_job_name=ZWE1SV
ZWE_zowe_job_prefix=ZWE1
ZWE_zowe_launchScript_logLevel=info
ZWE_zowe_launchScript_onComponentConfigureFail=warn
ZWE_zowe_launchScript_startupChecks_default=exit
ZWE_zowe_launchScript_startupChecks_ports=disabled
ZWE_zowe_logDirectory=/test/dir/logs
ZWE_zowe_network_client_tls_attls=false
ZWE_zowe_network_proxyType=https
ZWE_zowe_network_server_tls_attls=false
ZWE_zowe_network_server_tls_maxTls=TLSv1.3
ZWE_zowe_network_server_tls_minTls=TLSv1.2
ZWE_zowe_rbacProfileIdentifier=1
ZWE_zowe_runtimeDirectory=/test/dir
ZWE_zowe_setup_certificate_dname_caCommonName="Zowe Development Instances CA"
ZWE_zowe_setup_certificate_dname_commonName="Zowe Development Instances Certificate"
ZWE_zowe_setup_certificate_dname_country=CZ
ZWE_zowe_setup_certificate_dname_locality=Prague
ZWE_zowe_setup_certificate_dname_org="Zowe Sample"
ZWE_zowe_setup_certificate_dname_orgUnit="API Mediation Layer"
ZWE_zowe_setup_certificate_dname_state=Prague
ZWE_zowe_setup_certificate_pkcs12_caAlias=local_ca
ZWE_zowe_setup_certificate_pkcs12_caPassword=local_ca_password
ZWE_zowe_setup_certificate_pkcs12_directory=/test/dir/pkcs12
ZWE_zowe_setup_certificate_pkcs12_lock=true
ZWE_zowe_setup_certificate_pkcs12_name=localhost
ZWE_zowe_setup_certificate_pkcs12_password=password
ZWE_zowe_setup_certificate_type=PKCS12
ZWE_zowe_setup_certificate_validity=3650
ZWE_zowe_setup_dataset_authLoadlib=TEST.DATASET.PFX.SZWEAUTH
ZWE_zowe_setup_dataset_authPluginLib=DOES.EXIST
ZWE_zowe_setup_dataset_jcllib=TEST.DATASET.PFX.JCLLIB
ZWE_zowe_setup_dataset_loadlib=TEST.DATASET.PFX.SZWEEXEC
ZWE_zowe_setup_dataset_parmlib=TEST.DATASET.PFX.PARMLIB
ZWE_zowe_setup_dataset_parmlibMembers_zis=ZWESIP00
ZWE_zowe_setup_dataset_prefix=TEST.DATASET.PFX
ZWE_zowe_setup_dataset_proclib=TEST.DATASET.PFX.TEST.PROCLIB
ZWE_zowe_setup_jcl_enable=true
ZWE_zowe_setup_jcl_header=
ZWE_zowe_setup_security_groups_admin=ZWEADMIN
ZWE_zowe_setup_security_groups_stc=ZWEADMIN
ZWE_zowe_setup_security_groups_sysProg=ZWEADMIN
ZWE_zowe_setup_security_product=ESMT
ZWE_zowe_setup_security_stcs_aux=ZWESASTC
ZWE_zowe_setup_security_stcs_zis=ZWESISTC
ZWE_zowe_setup_security_stcs_zowe=ZWESLSTC
ZWE_zowe_setup_security_users_zis=ZWESIUSR
ZWE_zowe_setup_security_users_zowe=ZWESVUSR
ZWE_zowe_setup_vsam_mode=NONRLS
ZWE_zowe_setup_vsam_name=TEST.DATASET.PFX.VSAM
ZWE_zowe_setup_vsam_storageClass=
ZWE_zowe_setup_vsam_volume=TSTVOL
ZWE_zowe_sysMessageTrim=false
ZWE_zowe_sysMessages=ZWEL0021I,ZWEL0018I,ZWEL0006I,ZWES1601I,ZWEL0008I,ZWEL0022I,ZWEL0001I,ZWEL0002I,ZWEAM000I,ZWED0031I,ZWES1013I
ZWE_zowe_sysMessages_0=ZWEL0021I
ZWE_zowe_sysMessages_10=ZWES1013I
ZWE_zowe_sysMessages_1=ZWEL0018I
ZWE_zowe_sysMessages_2=ZWEL0006I
ZWE_zowe_sysMessages_3=ZWES1601I
ZWE_zowe_sysMessages_4=ZWEL0008I
ZWE_zowe_sysMessages_5=ZWEL0022I
ZWE_zowe_sysMessages_6=ZWEL0001I
ZWE_zowe_sysMessages_7=ZWEL0002I
ZWE_zowe_sysMessages_8=ZWEAM000I
ZWE_zowe_sysMessages_9=ZWED0031I
ZWE_zowe_verifyCertificates=STRICT
ZWE_zowe_workspaceDirectory=/test/dir/workspace"
`;
